# meteologica-backend-test-2025

./: .gitattributes  .gitignore  README.md  docker-compose.tests.yml  docker-compose.yml  log.txt  meteo.csv  run_build.sh  run_tests.sh
db/init/: 01_schema.sql
servicioA/: CMakeLists.txt  Dockerfile  packages.txt
servicioA/openapi/: servicioa-openapi.yaml
servicioA/src/: db_config.cpp  db_config.h  main.cpp  utils.cpp  utils.h
servicioA/tests/: test_conninfo.cpp  test_ingest_sample.cpp  test_utils.cpp
servicioB/: Dockerfile  packages.txt  requirements.txt
servicioB/openapi/: openapi.json
servicioB/src/: aggregations.py  cache.py  clients.py  main.py
servicioB/tests/: conftest.py  test_aggregate_daily.py  test_aggregations.py  test_api_contract.py  test_clients.py
